--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -3,6 +3,7 @@ $primary: darken(#428bca, 20%);
 $orange: #fd7e14;
 $purple: #6f42c1;
 $pink: #d63384;
+$grey: #747273; 
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
@@ -123,6 +124,9 @@ body #scheda_pai table tr td {
 
 &.text-pink {
     color: $pink;
+}
+&.text-grey {
+    color: $grey;
 }
 }
 #visualizza-tables {
