--- a/templates/barthel/index.html.twig
+++ b/templates/barthel/index.html.twig
@@ -12,6 +12,7 @@
             <tr>
                 <th>Id</th>
                 <th>Data di valutazione</th>
+                <th>Assistito</th>
                 <th>Totale Valutazione Funzionale</th>
                 <th>Totale</th>
                 <th>Operazioni</th>
@@ -22,6 +23,7 @@
             <tr>
                 <td data-title='Id'>{{ barthel.id }}</td>
                 <td data-title='Data valutazione'>{{ barthel.dataValutazione ? barthel.dataValutazione|date('Y-m-d') : '' }}</td>
+                <td data-title= 'Assistito'>{{barthel.schedaPAI.nomeAssistito}} {{barthel.schedaPAI.cognomeAssistito}}<br></td>
                 <td data-title='Totale valutazione funzionale'>{{ barthel.totaleValutazioneFunzionale }}</td>
                 <td data-title='Totale'>{{ barthel.totale }}</td>
                 <td data-title='Operazioni'>
