--- a/templates/braden/index.html.twig
+++ b/templates/braden/index.html.twig
@@ -12,6 +12,7 @@
             <tr>
                 <th>Id</th>
                 <th>Data Valutazione</th>
+                <th>Assistito</th>
                 <th>Totale</th>
                 <th>Operazioni</th>
             </tr>
@@ -21,6 +22,7 @@
             <tr>
                 <td data-title='Id'>{{ braden.id }}</td>
                 <td data-title='Data Valutazione'>{{ braden.dataValutazione ? braden.dataValutazione|date('Y-m-d') : '' }}</td>
+                <td data-title='Assistito'>{{braden.schedaPAI.nomeAssistito}} {{braden.schedaPAI.cognomeAssistito}}</td>
                 <td data-title='Totale'>{{ braden.totale }}</td>
                 <td data-title='Operazioni'>
                     <div class="btn-group" role="group">
