Aggiornamento schede da verificare.Inizio edit nomi/id

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 							<a {% if app.user.roles[0] == 'ROLE_USER' %}class="invisible"{% endif %} href="{{ path('app_elenco_schede') }}" class="nav-link px-2 text-white">Schede</a>
 						</li>
 						<li>
-							<a {% if app.user.roles[0] == 'ROLE_USER' %}class="invisible"{% endif %} href="{{ path('app_scheda_pai_index') }}" class="nav-link px-2 text-white">Sincronizza</a>
+							<a {% if app.user.roles[0] == 'ROLE_USER' %}class="invisible"{% endif %} href="{{ path('app_scheda_pai_sincronizza') }}" class="nav-link px-2 text-white">Sincronizza</a>
 						</li>
 					</ul>
 					<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
